--- a/client/src/app/auth/components/signup/signup.component.html
+++ b/client/src/app/auth/components/signup/signup.component.html
@@ -88,7 +88,7 @@
         class="signup-form__submit-button"
         color="primary"
         (click)="submitForm()"
-        [disabled]="submitted && (signupForm.invalid || !termsAccepted)"
+        [disabled]="attempedSubmit && (signupForm.invalid || !termsAccepted)"
       >
         Sign up
       </button>
