--- a/client/src/app/auth/components/password-recovery/password-recovery.component.html
+++ b/client/src/app/auth/components/password-recovery/password-recovery.component.html
@@ -29,7 +29,7 @@
         class="password-recovery-form__submit-button"
         color="primary"
         (click)="submitForm()"
-        [disabled]="passwordResetForm.invalid && passwordResetForm.touched"
+        [disabled]="attempedSubmit && passwordResetForm.invalid"
       >
         Password reset
       </button>
