feat: update password reset

--- a/client/src/app/auth/components/password-recovery/password-recovery.component.html
+++ b/client/src/app/auth/components/password-recovery/password-recovery.component.html
@@ -1,5 +1,8 @@
 <div class="wrapper">
-  <div class="password-recovery-wrapper">
+  <div
+    class="password-recovery-wrapper"
+    [ngClass]="{ disabled: pendingResponceSubject | async }"
+  >
     <h2 class="password-recovery-title"><b>SMART</b>family.io</h2>
     <div class="password-recovery-content">
       <h3 class="password-recovery-subtitle">Forgot Password ?</h3>
@@ -29,7 +32,10 @@
         class="password-recovery-form__submit-button"
         color="primary"
         (click)="submitForm()"
-        [disabled]="attempedSubmit && passwordResetForm.invalid"
+        [disabled]="
+          (attempedSubmit && passwordResetForm.invalid) ||
+          (pendingResponceSubject | async)
+        "
       >
         Password reset
       </button>
