fix: fix signup

--- a/client/src/app/auth/components/signin/signin.component.html
+++ b/client/src/app/auth/components/signin/signin.component.html
@@ -67,7 +67,7 @@
 
     <div class="google-auth">
       <a mat-button class="google-auth__button" [href]="urlGoogleAuth">
-        <mat-icon class="mat-icon" svgIcon="google-icon"></mat-icon>
+        <mat-icon class="mat-icon" svgIcon="google"></mat-icon>
         Continue with Google
       </a>
     </div>
