--- a/client/src/app/dashboard/components/dashboard-layout/dashboard-layout.component.scss
+++ b/client/src/app/dashboard/components/dashboard-layout/dashboard-layout.component.scss
@@ -1,13 +1,34 @@
 .dashboard {
   display: flex;
-  min-height: 100%;
-  width: 100%;
 
-  background: #f4f5f7;
+  width: 100%;
+  min-height: 100%;
+
+  background: #ebebeb;
 
   &__main-container {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
     flex-grow: 1;
+
+    width: 100%;
+    max-height: calc(100vh - 20px);
+  }
+}
+
+.dashboard--tablet {
+  max-height: 100%;
+
+  .dashboard__header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+
+  .dashboard__main-container {
+    margin-top: 81px;
   }
 }
