--- a/client/src/app/dashboard/components/header/header.component.scss
+++ b/client/src/app/dashboard/components/header/header.component.scss
@@ -3,10 +3,12 @@
   justify-content: center;
   align-items: center;
   gap: 50px;
+  box-sizing: border-box;
   padding: 20px 40px;
+  min-height: 80px;
 
-  border-bottom: 1px solid rgba(224, 224, 224, 0.1);
-  background: #e8e8e8;
+  background: #dddddd;
+  box-shadow: 1px 1px 1px 2px rgba(57, 57, 57, 0.15);
 
   &__title {
     font-weight: 400;
@@ -46,4 +48,8 @@
       background-color: rgba(226, 192, 191, 0.8);
     }
   }
+}
+
+::ng-deep .dialog-transform {
+  transform: translateX(140px);
 }
