--- a/client/src/app/dashboard/components/side-navbar/side-navbar.component.scss
+++ b/client/src/app/dashboard/components/side-navbar/side-navbar.component.scss
@@ -1,6 +1,7 @@
 .sidebar {
   left: 0;
-  z-index: 10;
+  // Less is not possible, the table header by default has a value of 100
+  z-index: 101;
 
   display: flex;
   flex-direction: column;
