--- a/client/src/app/shared/components/breakdown/breakdown.component.html
+++ b/client/src/app/shared/components/breakdown/breakdown.component.html
@@ -21,7 +21,7 @@
     <div class="category__compare">
       <p
         class="category__compare-value arrow-up"
-        [ngClass]="{ 'arrow-down': getMonthTrend() }"
+        [ngClass]="{ 'arrow-down': !getMonthTrend() }"
       >
         {{ getDiffInPercent() }}
       </p>
