--- a/client/src/app/dashboard/components/budget/budget.component.scss
+++ b/client/src/app/dashboard/components/budget/budget.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 400px;
+  max-width: 350px;
 }
 
 .form {
@@ -23,10 +23,10 @@
 
   &__button {
     width: 100%;
-    height: 40px;
+    height: 42px;
 
     &--cancel {
-      background-color: rgb(249, 86, 121);
+      background-color: rgba(249, 86, 121, 0.8);
     }
   }
 
