fix: fix spelling

--- a/client/src/app/dashboard/components/budget/budget.component.html
+++ b/client/src/app/dashboard/components/budget/budget.component.html
@@ -46,7 +46,7 @@
           appearance="outline"
           hideRequiredMarker
         >
-          <mat-label class="mat-label--disabled"> Currensy </mat-label>
+          <mat-label class="mat-label--disabled"> Currency </mat-label>
           <input
             class="mat-input--disabled"
             matInput
